--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <nav class="navbar fixed-top navbar-expand-lg bg-color">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#">
-                    <img src="Assets/LOGO EZ.png" alt="logoExplicit" width="150" height="100">
+                    <img src="Assets/LogoEz.png" alt="logoExplicit" width="150" height="100">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -57,19 +57,22 @@
                 <div class="card" style="width: 18rem;">
                     <img src="Assets/card1.jpeg" class="card-img-top" alt="card1img">
                     <div class="card-body">
-                      <p class="card-text">Welcome to our music streaming platform! Enjoy seamless access to a vast library of songs spanning various genres and artists.</p>
+                        <p class="card-text">Welcome to our music streaming platform! Enjoy seamless access to a vast
+                            library of songs spanning various genres and artists.</p>
                     </div>
                 </div>
                 <div class="card" style="width: 18rem;">
                     <img src="Assets/card2.jpeg" class="card-img-top" alt="card1img">
                     <div class="card-body">
-                      <p class="card-text">Discover new music with personalized recommendations and curated playlists tailored to your tastes and moods.</p>
+                        <p class="card-text">Discover new music with personalized recommendations and curated playlists
+                            tailored to your tastes and moods.</p>
                     </div>
                 </div>
                 <div class="card" style="width: 18rem;">
                     <img src="Assets/card3.jpeg" class="card-img-top" alt="card1img">
                     <div class="card-body">
-                      <p class="card-text">Join our global community of music enthusiasts. Share your favorite tracks, create playlists, and connect with friends effortlessly across all devices.</p>
+                        <p class="card-text">Join our global community of music enthusiasts. Share your favorite tracks,
+                            create playlists, and connect with friends effortlessly across all devices.</p>
                     </div>
                 </div>
             </div>
@@ -78,7 +81,8 @@
     <footer>
         <div class="container-fluid ctn-footer">
             <p class="footer-text">
-                All rights reserved. © 2024 Explicit. The content of this website is protected by copyright laws. Reproduction in whole or in part without prior written permission is prohibited.
+                All rights reserved. © 2024 Explicit. The content of this website is protected by copyright laws.
+                Reproduction in whole or in part without prior written permission is prohibited.
             </p>
         </div>
     </footer>
